--- a/deny-tor_ips.conf
+++ b/deny-tor_ips.conf
@@ -223,7 +223,6 @@ deny 173.0.3.111;
 deny 173.237.206.68;
 deny 173.249.57.253;
 deny 173.255.198.243;
-deny 173.44.141.34;
 deny 176.118.193.33;
 deny 176.121.81.51;
 deny 176.58.100.98;
@@ -978,13 +977,13 @@ deny 217.199.199.250;
 deny 23.137.248.100;
 deny 23.137.248.192;
 deny 23.137.250.83;
+deny 23.137.253.109;
 deny 23.137.253.254;
 deny 23.137.253.27;
 deny 23.137.254.137;
 deny 23.151.8.8;
 deny 23.153.248.33;
 deny 23.153.248.34;
-deny 23.155.8.104;
 deny 23.184.48.254;
 deny 23.184.48.78;
 deny 23.191.200.10;
@@ -1051,7 +1050,6 @@ deny 2600:3c0a::f03c:95ff:fe5d:a877;
 deny 2600:3c0b::f03c:95ff:fefa:bdff;
 deny 2602:2da:0:33:5054:ff:fe6c:39dc;
 deny 2602:2da:0:34:5054:ff:fe7e:7c21;
-deny 2602:2e5::104;
 deny 2602:f9f3:0:2::319;
 deny 2602:fa8a:3:a::a;
 deny 2602:fc24:10:61b::1;
@@ -1060,6 +1058,7 @@ deny 2602:fc24:12:9fef::1;
 deny 2602:fc24:12:a679::1;
 deny 2602:fc24:18:f38f::1;
 deny 2602:fc24:18:f84a::1;
+deny 2602:fc24:19:1c9::1;
 deny 2602:fc24:19:524::1;
 deny 2602:fc24:19:eb06::dead;
 deny 2602:fef9:100:1100::199;
@@ -1343,6 +1342,7 @@ deny 2a04:52c0:103:5acd::1;
 deny 2a04:52c0:104:4735::1;
 deny 2a04:52c0:104:ad97::1;
 deny 2a04:52c0:105:98a3::1;
+deny 2a04:52c0:105:d7eb::1;
 deny 2a04:52c0:108:a34f::1;
 deny 2a04:52c0:116:e0e3::1;
 deny 2a04:52c0:123:c6c3::1;
@@ -1390,7 +1390,6 @@ deny 2a09:b280:fe01:61::a;
 deny 2a0a:4cc0:c0:130c:14c3:a0ff:fe24:7692;
 deny 2a0b:7140:1:1:5054:ff:fe12:2305;
 deny 2a0b:7140:6:1:5054:ff:fed8:5956;
-deny 2a0b:7140:8:1:5054:ff:fe43:9f9;
 deny 2a0b:f4c0:16c:10::1;
 deny 2a0b:f4c0:16c:1::1;
 deny 2a0b:f4c0:16c:11::1;
@@ -1660,6 +1659,7 @@ deny 2a0f:e586:f:f:a060:ebda:49aa:b011;
 deny 2a0f:e586:f:f:baa4:d491:90be:dca5;
 deny 2a0f:e586:f:f:c94a:de42:aac1:9045;
 deny 2a0f:e586:f:f:e356:1bda:fc05:6784;
+deny 2a10:1fc0:10::ce18:9bf9;
 deny 2a10:8a40:f313::29;
 deny 2a10:c800:1:9cc6::1;
 deny 2a10:c800:1:f7f8:0:1ce:1ce:babe;
@@ -1861,6 +1861,7 @@ deny 51.89.136.168;
 deny 51.91.18.151;
 deny 5.196.95.34;
 deny 5.255.100.227;
+deny 5.255.100.26;
 deny 5.255.103.235;
 deny 5.255.104.202;
 deny 5.255.111.64;
@@ -1941,6 +1942,7 @@ deny 84.211.226.13;
 deny 84.239.46.144;
 deny 84.247.183.128;
 deny 85.239.41.130;
+deny 85.239.55.172;
 deny 85.93.218.204;
 deny 86.107.101.115;
 deny 86.54.28.49;
