--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -650,6 +650,7 @@ allow 193.189.100.206;
 allow 193.218.118.133;
 allow 193.218.118.153;
 allow 193.218.118.157;
+allow 193.218.118.160;
 allow 193.218.118.173;
 allow 193.218.118.178;
 allow 193.218.118.182;
@@ -936,7 +937,6 @@ allow 204.8.96.88;
 allow 204.8.96.89;
 allow 205.185.113.180;
 allow 205.185.113.8;
-allow 205.185.116.215;
 allow 205.185.116.34;
 allow 205.185.117.149;
 allow 205.185.118.31;
@@ -966,7 +966,6 @@ allow 212.21.66.6;
 allow 212.38.189.186;
 allow 212.69.167.80;
 allow 212.73.134.204;
-allow 212.95.54.78;
 allow 216.239.90.19;
 allow 216.73.159.101;
 allow 216.73.159.75;
@@ -1653,6 +1652,7 @@ allow 2a0f:e586:f:f:9405:a52b:796f:aff2;
 allow 2a0f:e586:f:f:9dd4:5bf6:2230:ae55;
 allow 2a0f:e586:f:f:a052:2166:bef9:a432;
 allow 2a0f:e586:f:f:a060:ebda:49aa:b011;
+allow 2a0f:e586:f:f:b1ac:d060:1ef8:40de;
 allow 2a0f:e586:f:f:baa4:d491:90be:dca5;
 allow 2a0f:e586:f:f:c94a:de42:aac1:9045;
 allow 2a0f:e586:f:f:e356:1bda:fc05:6784;
