--- a/deny-tor_ips.conf
+++ b/deny-tor_ips.conf
@@ -650,6 +650,7 @@ deny 193.189.100.206;
 deny 193.218.118.133;
 deny 193.218.118.153;
 deny 193.218.118.157;
+deny 193.218.118.160;
 deny 193.218.118.173;
 deny 193.218.118.178;
 deny 193.218.118.182;
@@ -936,7 +937,6 @@ deny 204.8.96.88;
 deny 204.8.96.89;
 deny 205.185.113.180;
 deny 205.185.113.8;
-deny 205.185.116.215;
 deny 205.185.116.34;
 deny 205.185.117.149;
 deny 205.185.118.31;
@@ -966,7 +966,6 @@ deny 212.21.66.6;
 deny 212.38.189.186;
 deny 212.69.167.80;
 deny 212.73.134.204;
-deny 212.95.54.78;
 deny 216.239.90.19;
 deny 216.73.159.101;
 deny 216.73.159.75;
@@ -1653,6 +1652,7 @@ deny 2a0f:e586:f:f:9405:a52b:796f:aff2;
 deny 2a0f:e586:f:f:9dd4:5bf6:2230:ae55;
 deny 2a0f:e586:f:f:a052:2166:bef9:a432;
 deny 2a0f:e586:f:f:a060:ebda:49aa:b011;
+deny 2a0f:e586:f:f:b1ac:d060:1ef8:40de;
 deny 2a0f:e586:f:f:baa4:d491:90be:dca5;
 deny 2a0f:e586:f:f:c94a:de42:aac1:9045;
 deny 2a0f:e586:f:f:e356:1bda:fc05:6784;
