Update lists at 20250327-1501

--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -61,6 +61,7 @@ allow 107.189.12.88;
 allow 107.189.13.180;
 allow 107.189.13.251;
 allow 107.189.13.253;
+allow 107.189.13.254;
 allow 107.189.13.91;
 allow 107.189.14.106;
 allow 107.189.14.4;
@@ -134,6 +135,7 @@ allow 130.193.10.21;
 allow 130.193.15.186;
 allow 130.193.15.79;
 allow 13.201.187.55;
+allow 135.225.96.187;
 allow 136.244.111.163;
 allow 138.59.18.110;
 allow 139.99.172.11;
@@ -142,6 +144,7 @@ allow 141.164.38.67;
 allow 141.94.156.206;
 allow 141.94.156.54;
 allow 141.98.11.62;
+allow 142.171.12.88;
 allow 142.44.133.81;
 allow 142.44.234.69;
 allow 144.172.118.4;
@@ -157,6 +160,7 @@ allow 149.202.79.129;
 allow 149.56.22.133;
 allow 149.56.44.47;
 allow 152.32.199.79;
+allow 152.32.206.127;
 allow 152.53.133.14;
 allow 152.53.53.243;
 allow 154.16.116.61;
@@ -177,7 +181,6 @@ allow 161.97.71.11;
 allow 162.210.173.17;
 allow 162.216.18.62;
 allow 162.247.72.192;
-allow 162.247.72.199;
 allow 162.247.74.200;
 allow 162.247.74.201;
 allow 162.247.74.202;
@@ -227,7 +230,7 @@ allow 176.58.100.98;
 allow 176.58.121.177;
 allow 176.65.143.138;
 allow 176.97.114.202;
-allow 177.149.155.173;
+allow 177.149.152.222;
 allow 178.162.175.5;
 allow 178.162.197.91;
 allow 178.17.170.144;
@@ -965,6 +968,7 @@ allow 212.21.66.6;
 allow 212.38.189.186;
 allow 212.69.167.80;
 allow 212.73.134.204;
+allow 212.95.54.78;
 allow 216.239.90.19;
 allow 216.73.159.101;
 allow 216.73.159.75;
@@ -973,7 +977,6 @@ allow 217.199.199.250;
 allow 23.137.248.100;
 allow 23.137.248.192;
 allow 23.137.250.83;
-allow 23.137.253.109;
 allow 23.137.253.254;
 allow 23.137.253.27;
 allow 23.137.254.137;
@@ -1056,10 +1059,8 @@ allow 2602:fc24:12:9fef::1;
 allow 2602:fc24:12:a679::1;
 allow 2602:fc24:18:f38f::1;
 allow 2602:fc24:18:f84a::1;
-allow 2602:fc24:19:1c9::1;
 allow 2602:fc24:19:524::1;
 allow 2602:fc24:19:eb06::dead;
-allow 2602:fef9:100:1100::199;
 allow 2604:2dc0:101:200::53c8;
 allow 2604:2dc0:202:300::ed3;
 allow 2604:4300:a:224:216:3cff:fe31:d55f;
@@ -1150,6 +1151,7 @@ allow 2607:5300:205:300::c99;
 allow 2607:5300:60:566f::1;
 allow 2607:5300:61:785::;
 allow 2607:5300:61:785:1:2:3:4;
+allow 2607:f130:0:ed:216:3cff:febd:3b42;
 allow 2607:f530:8002::19;
 allow 2607:fa18:3:beef:f001:c0de:feed:ba5e;
 allow 2620:7:6001::101;
@@ -1338,7 +1340,6 @@ allow 2a04:52c0:103:5acd::1;
 allow 2a04:52c0:104:4735::1;
 allow 2a04:52c0:104:ad97::1;
 allow 2a04:52c0:105:98a3::1;
-allow 2a04:52c0:105:d7eb::1;
 allow 2a04:52c0:108:a34f::1;
 allow 2a04:52c0:116:e0e3::1;
 allow 2a04:52c0:123:c6c3::1;
@@ -1582,20 +1583,6 @@ allow 2a0c:5700:3133:4000:be24:11ff:fe51:a829;
 allow 2a0c:5700:3133:650:b0ea:eeff:fedb:1f7b;
 allow 2a0c:5cc0:1:1::293c:1518;
 allow 2a0c:e300::23;
-allow 2a0d:bbc7:0:1::10a;
-allow 2a0d:bbc7:0:1::1df;
-allow 2a0d:bbc7:0:1::254;
-allow 2a0d:bbc7:0:1::2ef;
-allow 2a0d:bbc7:0:1::320;
-allow 2a0d:bbc7:0:1::328;
-allow 2a0d:bbc7:0:1::36c;
-allow 2a0d:bbc7:0:1::38c;
-allow 2a0d:bbc7:0:1::394;
-allow 2a0d:bbc7:0:1::3bd;
-allow 2a0d:bbc7:0:1::3cc;
-allow 2a0d:bbc7:0:1::3d5;
-allow 2a0d:bbc7:0:1::50;
-allow 2a0d:bbc7:0:1::7f;
 allow 2a0d:c2c0:1:4::2;
 allow 2a0e:1d80:13:51e8::1;
 allow 2a0e:1d80:17:6f8d::1;
@@ -1776,6 +1763,7 @@ allow 45.148.10.111;
 allow 45.148.10.169;
 allow 45.157.11.6;
 allow 45.61.185.172;
+allow 45.61.186.203;
 allow 45.61.187.200;
 allow 45.61.188.15;
 allow 45.66.35.10;
@@ -1796,20 +1784,6 @@ allow 45.80.158.69;
 allow 45.8.22.207;
 allow 45.83.104.137;
 allow 45.83.21.193;
-allow 45.84.107.101;
-allow 45.84.107.128;
-allow 45.84.107.17;
-allow 45.84.107.172;
-allow 45.84.107.182;
-allow 45.84.107.198;
-allow 45.84.107.222;
-allow 45.84.107.33;
-allow 45.84.107.47;
-allow 45.84.107.54;
-allow 45.84.107.55;
-allow 45.84.107.74;
-allow 45.84.107.76;
-allow 45.84.107.97;
 allow 45.90.185.79;
 allow 45.9.148.50;
 allow 45.9.168.108;
@@ -1855,7 +1829,6 @@ allow 51.89.136.168;
 allow 51.91.18.151;
 allow 5.196.95.34;
 allow 5.255.100.227;
-allow 5.255.100.26;
 allow 5.255.103.235;
 allow 5.255.104.202;
 allow 5.255.111.64;
