--- a/set_real_ip_from-tor_ips.conf
+++ b/set_real_ip_from-tor_ips.conf
@@ -61,6 +61,7 @@ set_real_ip_from 107.189.12.88;
 set_real_ip_from 107.189.13.180;
 set_real_ip_from 107.189.13.251;
 set_real_ip_from 107.189.13.253;
+set_real_ip_from 107.189.13.254;
 set_real_ip_from 107.189.13.91;
 set_real_ip_from 107.189.14.106;
 set_real_ip_from 107.189.14.4;
@@ -134,6 +135,7 @@ set_real_ip_from 130.193.10.21;
 set_real_ip_from 130.193.15.186;
 set_real_ip_from 130.193.15.79;
 set_real_ip_from 13.201.187.55;
+set_real_ip_from 135.225.96.187;
 set_real_ip_from 136.244.111.163;
 set_real_ip_from 138.59.18.110;
 set_real_ip_from 139.99.172.11;
@@ -142,6 +144,7 @@ set_real_ip_from 141.164.38.67;
 set_real_ip_from 141.94.156.206;
 set_real_ip_from 141.94.156.54;
 set_real_ip_from 141.98.11.62;
+set_real_ip_from 142.171.12.88;
 set_real_ip_from 142.44.133.81;
 set_real_ip_from 142.44.234.69;
 set_real_ip_from 144.172.118.4;
@@ -157,6 +160,7 @@ set_real_ip_from 149.202.79.129;
 set_real_ip_from 149.56.22.133;
 set_real_ip_from 149.56.44.47;
 set_real_ip_from 152.32.199.79;
+set_real_ip_from 152.32.206.127;
 set_real_ip_from 152.53.133.14;
 set_real_ip_from 152.53.53.243;
 set_real_ip_from 154.16.116.61;
@@ -177,7 +181,6 @@ set_real_ip_from 161.97.71.11;
 set_real_ip_from 162.210.173.17;
 set_real_ip_from 162.216.18.62;
 set_real_ip_from 162.247.72.192;
-set_real_ip_from 162.247.72.199;
 set_real_ip_from 162.247.74.200;
 set_real_ip_from 162.247.74.201;
 set_real_ip_from 162.247.74.202;
@@ -227,7 +230,7 @@ set_real_ip_from 176.58.100.98;
 set_real_ip_from 176.58.121.177;
 set_real_ip_from 176.65.143.138;
 set_real_ip_from 176.97.114.202;
-set_real_ip_from 177.149.155.173;
+set_real_ip_from 177.149.152.222;
 set_real_ip_from 178.162.175.5;
 set_real_ip_from 178.162.197.91;
 set_real_ip_from 178.17.170.144;
@@ -965,6 +968,7 @@ set_real_ip_from 212.21.66.6;
 set_real_ip_from 212.38.189.186;
 set_real_ip_from 212.69.167.80;
 set_real_ip_from 212.73.134.204;
+set_real_ip_from 212.95.54.78;
 set_real_ip_from 216.239.90.19;
 set_real_ip_from 216.73.159.101;
 set_real_ip_from 216.73.159.75;
@@ -973,7 +977,6 @@ set_real_ip_from 217.199.199.250;
 set_real_ip_from 23.137.248.100;
 set_real_ip_from 23.137.248.192;
 set_real_ip_from 23.137.250.83;
-set_real_ip_from 23.137.253.109;
 set_real_ip_from 23.137.253.254;
 set_real_ip_from 23.137.253.27;
 set_real_ip_from 23.137.254.137;
@@ -1056,10 +1059,8 @@ set_real_ip_from 2602:fc24:12:9fef::1;
 set_real_ip_from 2602:fc24:12:a679::1;
 set_real_ip_from 2602:fc24:18:f38f::1;
 set_real_ip_from 2602:fc24:18:f84a::1;
-set_real_ip_from 2602:fc24:19:1c9::1;
 set_real_ip_from 2602:fc24:19:524::1;
 set_real_ip_from 2602:fc24:19:eb06::dead;
-set_real_ip_from 2602:fef9:100:1100::199;
 set_real_ip_from 2604:2dc0:101:200::53c8;
 set_real_ip_from 2604:2dc0:202:300::ed3;
 set_real_ip_from 2604:4300:a:224:216:3cff:fe31:d55f;
@@ -1150,6 +1151,7 @@ set_real_ip_from 2607:5300:205:300::c99;
 set_real_ip_from 2607:5300:60:566f::1;
 set_real_ip_from 2607:5300:61:785::;
 set_real_ip_from 2607:5300:61:785:1:2:3:4;
+set_real_ip_from 2607:f130:0:ed:216:3cff:febd:3b42;
 set_real_ip_from 2607:f530:8002::19;
 set_real_ip_from 2607:fa18:3:beef:f001:c0de:feed:ba5e;
 set_real_ip_from 2620:7:6001::101;
@@ -1338,7 +1340,6 @@ set_real_ip_from 2a04:52c0:103:5acd::1;
 set_real_ip_from 2a04:52c0:104:4735::1;
 set_real_ip_from 2a04:52c0:104:ad97::1;
 set_real_ip_from 2a04:52c0:105:98a3::1;
-set_real_ip_from 2a04:52c0:105:d7eb::1;
 set_real_ip_from 2a04:52c0:108:a34f::1;
 set_real_ip_from 2a04:52c0:116:e0e3::1;
 set_real_ip_from 2a04:52c0:123:c6c3::1;
@@ -1582,20 +1583,6 @@ set_real_ip_from 2a0c:5700:3133:4000:be24:11ff:fe51:a829;
 set_real_ip_from 2a0c:5700:3133:650:b0ea:eeff:fedb:1f7b;
 set_real_ip_from 2a0c:5cc0:1:1::293c:1518;
 set_real_ip_from 2a0c:e300::23;
-set_real_ip_from 2a0d:bbc7:0:1::10a;
-set_real_ip_from 2a0d:bbc7:0:1::1df;
-set_real_ip_from 2a0d:bbc7:0:1::254;
-set_real_ip_from 2a0d:bbc7:0:1::2ef;
-set_real_ip_from 2a0d:bbc7:0:1::320;
-set_real_ip_from 2a0d:bbc7:0:1::328;
-set_real_ip_from 2a0d:bbc7:0:1::36c;
-set_real_ip_from 2a0d:bbc7:0:1::38c;
-set_real_ip_from 2a0d:bbc7:0:1::394;
-set_real_ip_from 2a0d:bbc7:0:1::3bd;
-set_real_ip_from 2a0d:bbc7:0:1::3cc;
-set_real_ip_from 2a0d:bbc7:0:1::3d5;
-set_real_ip_from 2a0d:bbc7:0:1::50;
-set_real_ip_from 2a0d:bbc7:0:1::7f;
 set_real_ip_from 2a0d:c2c0:1:4::2;
 set_real_ip_from 2a0e:1d80:13:51e8::1;
 set_real_ip_from 2a0e:1d80:17:6f8d::1;
@@ -1776,6 +1763,7 @@ set_real_ip_from 45.148.10.111;
 set_real_ip_from 45.148.10.169;
 set_real_ip_from 45.157.11.6;
 set_real_ip_from 45.61.185.172;
+set_real_ip_from 45.61.186.203;
 set_real_ip_from 45.61.187.200;
 set_real_ip_from 45.61.188.15;
 set_real_ip_from 45.66.35.10;
@@ -1796,20 +1784,6 @@ set_real_ip_from 45.80.158.69;
 set_real_ip_from 45.8.22.207;
 set_real_ip_from 45.83.104.137;
 set_real_ip_from 45.83.21.193;
-set_real_ip_from 45.84.107.101;
-set_real_ip_from 45.84.107.128;
-set_real_ip_from 45.84.107.17;
-set_real_ip_from 45.84.107.172;
-set_real_ip_from 45.84.107.182;
-set_real_ip_from 45.84.107.198;
-set_real_ip_from 45.84.107.222;
-set_real_ip_from 45.84.107.33;
-set_real_ip_from 45.84.107.47;
-set_real_ip_from 45.84.107.54;
-set_real_ip_from 45.84.107.55;
-set_real_ip_from 45.84.107.74;
-set_real_ip_from 45.84.107.76;
-set_real_ip_from 45.84.107.97;
 set_real_ip_from 45.90.185.79;
 set_real_ip_from 45.9.148.50;
 set_real_ip_from 45.9.168.108;
@@ -1855,7 +1829,6 @@ set_real_ip_from 51.89.136.168;
 set_real_ip_from 51.91.18.151;
 set_real_ip_from 5.196.95.34;
 set_real_ip_from 5.255.100.227;
-set_real_ip_from 5.255.100.26;
 set_real_ip_from 5.255.103.235;
 set_real_ip_from 5.255.104.202;
 set_real_ip_from 5.255.111.64;
