--- a/deny-tor_ips.conf
+++ b/deny-tor_ips.conf
@@ -61,6 +61,7 @@ deny 107.189.12.88;
 deny 107.189.13.180;
 deny 107.189.13.251;
 deny 107.189.13.253;
+deny 107.189.13.254;
 deny 107.189.13.91;
 deny 107.189.14.106;
 deny 107.189.14.4;
@@ -134,6 +135,7 @@ deny 130.193.10.21;
 deny 130.193.15.186;
 deny 130.193.15.79;
 deny 13.201.187.55;
+deny 135.225.96.187;
 deny 136.244.111.163;
 deny 138.59.18.110;
 deny 139.99.172.11;
@@ -142,6 +144,7 @@ deny 141.164.38.67;
 deny 141.94.156.206;
 deny 141.94.156.54;
 deny 141.98.11.62;
+deny 142.171.12.88;
 deny 142.44.133.81;
 deny 142.44.234.69;
 deny 144.172.118.4;
@@ -157,6 +160,7 @@ deny 149.202.79.129;
 deny 149.56.22.133;
 deny 149.56.44.47;
 deny 152.32.199.79;
+deny 152.32.206.127;
 deny 152.53.133.14;
 deny 152.53.53.243;
 deny 154.16.116.61;
@@ -177,7 +181,6 @@ deny 161.97.71.11;
 deny 162.210.173.17;
 deny 162.216.18.62;
 deny 162.247.72.192;
-deny 162.247.72.199;
 deny 162.247.74.200;
 deny 162.247.74.201;
 deny 162.247.74.202;
@@ -227,7 +230,7 @@ deny 176.58.100.98;
 deny 176.58.121.177;
 deny 176.65.143.138;
 deny 176.97.114.202;
-deny 177.149.155.173;
+deny 177.149.152.222;
 deny 178.162.175.5;
 deny 178.162.197.91;
 deny 178.17.170.144;
@@ -965,6 +968,7 @@ deny 212.21.66.6;
 deny 212.38.189.186;
 deny 212.69.167.80;
 deny 212.73.134.204;
+deny 212.95.54.78;
 deny 216.239.90.19;
 deny 216.73.159.101;
 deny 216.73.159.75;
@@ -973,7 +977,6 @@ deny 217.199.199.250;
 deny 23.137.248.100;
 deny 23.137.248.192;
 deny 23.137.250.83;
-deny 23.137.253.109;
 deny 23.137.253.254;
 deny 23.137.253.27;
 deny 23.137.254.137;
@@ -1056,10 +1059,8 @@ deny 2602:fc24:12:9fef::1;
 deny 2602:fc24:12:a679::1;
 deny 2602:fc24:18:f38f::1;
 deny 2602:fc24:18:f84a::1;
-deny 2602:fc24:19:1c9::1;
 deny 2602:fc24:19:524::1;
 deny 2602:fc24:19:eb06::dead;
-deny 2602:fef9:100:1100::199;
 deny 2604:2dc0:101:200::53c8;
 deny 2604:2dc0:202:300::ed3;
 deny 2604:4300:a:224:216:3cff:fe31:d55f;
@@ -1150,6 +1151,7 @@ deny 2607:5300:205:300::c99;
 deny 2607:5300:60:566f::1;
 deny 2607:5300:61:785::;
 deny 2607:5300:61:785:1:2:3:4;
+deny 2607:f130:0:ed:216:3cff:febd:3b42;
 deny 2607:f530:8002::19;
 deny 2607:fa18:3:beef:f001:c0de:feed:ba5e;
 deny 2620:7:6001::101;
@@ -1338,7 +1340,6 @@ deny 2a04:52c0:103:5acd::1;
 deny 2a04:52c0:104:4735::1;
 deny 2a04:52c0:104:ad97::1;
 deny 2a04:52c0:105:98a3::1;
-deny 2a04:52c0:105:d7eb::1;
 deny 2a04:52c0:108:a34f::1;
 deny 2a04:52c0:116:e0e3::1;
 deny 2a04:52c0:123:c6c3::1;
@@ -1582,20 +1583,6 @@ deny 2a0c:5700:3133:4000:be24:11ff:fe51:a829;
 deny 2a0c:5700:3133:650:b0ea:eeff:fedb:1f7b;
 deny 2a0c:5cc0:1:1::293c:1518;
 deny 2a0c:e300::23;
-deny 2a0d:bbc7:0:1::10a;
-deny 2a0d:bbc7:0:1::1df;
-deny 2a0d:bbc7:0:1::254;
-deny 2a0d:bbc7:0:1::2ef;
-deny 2a0d:bbc7:0:1::320;
-deny 2a0d:bbc7:0:1::328;
-deny 2a0d:bbc7:0:1::36c;
-deny 2a0d:bbc7:0:1::38c;
-deny 2a0d:bbc7:0:1::394;
-deny 2a0d:bbc7:0:1::3bd;
-deny 2a0d:bbc7:0:1::3cc;
-deny 2a0d:bbc7:0:1::3d5;
-deny 2a0d:bbc7:0:1::50;
-deny 2a0d:bbc7:0:1::7f;
 deny 2a0d:c2c0:1:4::2;
 deny 2a0e:1d80:13:51e8::1;
 deny 2a0e:1d80:17:6f8d::1;
@@ -1776,6 +1763,7 @@ deny 45.148.10.111;
 deny 45.148.10.169;
 deny 45.157.11.6;
 deny 45.61.185.172;
+deny 45.61.186.203;
 deny 45.61.187.200;
 deny 45.61.188.15;
 deny 45.66.35.10;
@@ -1796,20 +1784,6 @@ deny 45.80.158.69;
 deny 45.8.22.207;
 deny 45.83.104.137;
 deny 45.83.21.193;
-deny 45.84.107.101;
-deny 45.84.107.128;
-deny 45.84.107.17;
-deny 45.84.107.172;
-deny 45.84.107.182;
-deny 45.84.107.198;
-deny 45.84.107.222;
-deny 45.84.107.33;
-deny 45.84.107.47;
-deny 45.84.107.54;
-deny 45.84.107.55;
-deny 45.84.107.74;
-deny 45.84.107.76;
-deny 45.84.107.97;
 deny 45.90.185.79;
 deny 45.9.148.50;
 deny 45.9.168.108;
@@ -1855,7 +1829,6 @@ deny 51.89.136.168;
 deny 51.91.18.151;
 deny 5.196.95.34;
 deny 5.255.100.227;
-deny 5.255.100.26;
 deny 5.255.103.235;
 deny 5.255.104.202;
 deny 5.255.111.64;
