--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -127,14 +127,12 @@ allow 118.163.74.160;
 allow 121.127.37.151;
 allow 121.78.28.166;
 allow 123.253.35.32;
-allow 124.86.79.94;
 allow 125.212.241.131;
 allow 128.127.180.156;
 allow 128.31.0.13;
 allow 130.193.10.21;
 allow 130.193.15.186;
 allow 130.193.15.79;
-allow 13.126.29.181;
 allow 135.225.96.187;
 allow 136.244.111.163;
 allow 138.59.18.110;
@@ -220,6 +218,7 @@ allow 172.245.33.159;
 allow 172.81.131.110;
 allow 172.81.131.139;
 allow 172.81.131.156;
+allow 172.81.132.185;
 allow 172.81.132.94;
 allow 173.0.3.111;
 allow 173.237.206.68;
@@ -960,6 +959,7 @@ allow 209.141.40.68;
 allow 209.141.45.141;
 allow 209.141.45.81;
 allow 209.141.46.203;
+allow 209.141.51.180;
 allow 209.141.54.203;
 allow 209.141.54.218;
 allow 209.141.55.26;
@@ -978,6 +978,7 @@ allow 217.199.199.250;
 allow 23.137.248.100;
 allow 23.137.248.192;
 allow 23.137.250.83;
+allow 23.137.253.109;
 allow 23.137.253.254;
 allow 23.137.253.27;
 allow 23.137.254.137;
@@ -1060,6 +1061,7 @@ allow 2602:fc24:12:9fef::1;
 allow 2602:fc24:12:a679::1;
 allow 2602:fc24:18:f38f::1;
 allow 2602:fc24:18:f84a::1;
+allow 2602:fc24:19:1c9::1;
 allow 2602:fc24:19:524::1;
 allow 2602:fc24:19:eb06::dead;
 allow 2602:fef9:100:1100::199;
@@ -1141,10 +1143,12 @@ allow 2605:6400:30:f8d5::1;
 allow 2605:6400:30:f8da:2b2:a293:30ad:506d;
 allow 2605:6400:30:f91b:8124:6a51:9ea2:5d13;
 allow 2605:6400:30:f920:f523:28ef:3617:8b86;
+allow 2605:6400:40:fde8:11c7:119b:aaf9:2722;
 allow 2605:6400:40:fe09::2;
 allow 2605:6400:d814:1b8::4;
 allow 2605:6400:d814:1d1::100;
 allow 2605:aa80:0:9::3;
+allow 2605:aa80:3:87c9::1;
 allow 2607:5300:120:c74::1;
 allow 2607:5300:201:3100::35c5;
 allow 2607:5300:205:200::4894;
@@ -1270,6 +1274,7 @@ allow 2a00:74a0:e000:1003::114;
 allow 2a00:99a0:0:1000::2;
 allow 2a00:c70:1:185:246:84:179:1;
 allow 2a01:270:9847::1;
+allow 2a01:4262:1ab:ffff::133;
 allow 2a01:4f9:2b:75d::124:148;
 allow 2a01:5e0:36:c311::1;
 allow 2a01:5e0:36:cf2a::1;
@@ -1585,6 +1590,20 @@ allow 2a0c:5700:3133:4000:be24:11ff:fe51:a829;
 allow 2a0c:5700:3133:650:b0ea:eeff:fedb:1f7b;
 allow 2a0c:5cc0:1:1::293c:1518;
 allow 2a0c:e300::23;
+allow 2a0d:bbc7:0:1::10a;
+allow 2a0d:bbc7:0:1::1df;
+allow 2a0d:bbc7:0:1::254;
+allow 2a0d:bbc7:0:1::2ef;
+allow 2a0d:bbc7:0:1::320;
+allow 2a0d:bbc7:0:1::328;
+allow 2a0d:bbc7:0:1::36c;
+allow 2a0d:bbc7:0:1::38c;
+allow 2a0d:bbc7:0:1::394;
+allow 2a0d:bbc7:0:1::3bd;
+allow 2a0d:bbc7:0:1::3cc;
+allow 2a0d:bbc7:0:1::3d5;
+allow 2a0d:bbc7:0:1::50;
+allow 2a0d:bbc7:0:1::7f;
 allow 2a0e:1d80:13:51e8::1;
 allow 2a0e:1d80:17:6f8d::1;
 allow 2a0e:4005:1002:ffff:185:40:4:100;
@@ -1758,6 +1777,7 @@ allow 45.148.10.169;
 allow 45.157.11.6;
 allow 45.61.185.172;
 allow 45.61.186.203;
+allow 45.61.187.200;
 allow 45.61.188.15;
 allow 45.66.35.10;
 allow 45.66.35.20;
@@ -1777,6 +1797,20 @@ allow 45.80.158.69;
 allow 45.8.22.207;
 allow 45.83.104.137;
 allow 45.83.21.193;
+allow 45.84.107.101;
+allow 45.84.107.128;
+allow 45.84.107.17;
+allow 45.84.107.172;
+allow 45.84.107.182;
+allow 45.84.107.198;
+allow 45.84.107.222;
+allow 45.84.107.33;
+allow 45.84.107.47;
+allow 45.84.107.54;
+allow 45.84.107.55;
+allow 45.84.107.74;
+allow 45.84.107.76;
+allow 45.84.107.97;
 allow 45.90.185.79;
 allow 45.9.148.50;
 allow 45.9.168.108;
@@ -1847,6 +1881,7 @@ allow 5.45.104.176;
 allow 5.45.98.162;
 allow 57.128.164.66;
 allow 5.79.66.19;
+allow 60.37.155.172;
 allow 62.133.45.2;
 allow 62.133.63.146;
 allow 62.171.137.169;
