--- a/deny-tor_ips.conf
+++ b/deny-tor_ips.conf
@@ -127,14 +127,12 @@ deny 118.163.74.160;
 deny 121.127.37.151;
 deny 121.78.28.166;
 deny 123.253.35.32;
-deny 124.86.79.94;
 deny 125.212.241.131;
 deny 128.127.180.156;
 deny 128.31.0.13;
 deny 130.193.10.21;
 deny 130.193.15.186;
 deny 130.193.15.79;
-deny 13.126.29.181;
 deny 135.225.96.187;
 deny 136.244.111.163;
 deny 138.59.18.110;
@@ -220,6 +218,7 @@ deny 172.245.33.159;
 deny 172.81.131.110;
 deny 172.81.131.139;
 deny 172.81.131.156;
+deny 172.81.132.185;
 deny 172.81.132.94;
 deny 173.0.3.111;
 deny 173.237.206.68;
@@ -960,6 +959,7 @@ deny 209.141.40.68;
 deny 209.141.45.141;
 deny 209.141.45.81;
 deny 209.141.46.203;
+deny 209.141.51.180;
 deny 209.141.54.203;
 deny 209.141.54.218;
 deny 209.141.55.26;
@@ -978,6 +978,7 @@ deny 217.199.199.250;
 deny 23.137.248.100;
 deny 23.137.248.192;
 deny 23.137.250.83;
+deny 23.137.253.109;
 deny 23.137.253.254;
 deny 23.137.253.27;
 deny 23.137.254.137;
@@ -1060,6 +1061,7 @@ deny 2602:fc24:12:9fef::1;
 deny 2602:fc24:12:a679::1;
 deny 2602:fc24:18:f38f::1;
 deny 2602:fc24:18:f84a::1;
+deny 2602:fc24:19:1c9::1;
 deny 2602:fc24:19:524::1;
 deny 2602:fc24:19:eb06::dead;
 deny 2602:fef9:100:1100::199;
@@ -1141,10 +1143,12 @@ deny 2605:6400:30:f8d5::1;
 deny 2605:6400:30:f8da:2b2:a293:30ad:506d;
 deny 2605:6400:30:f91b:8124:6a51:9ea2:5d13;
 deny 2605:6400:30:f920:f523:28ef:3617:8b86;
+deny 2605:6400:40:fde8:11c7:119b:aaf9:2722;
 deny 2605:6400:40:fe09::2;
 deny 2605:6400:d814:1b8::4;
 deny 2605:6400:d814:1d1::100;
 deny 2605:aa80:0:9::3;
+deny 2605:aa80:3:87c9::1;
 deny 2607:5300:120:c74::1;
 deny 2607:5300:201:3100::35c5;
 deny 2607:5300:205:200::4894;
@@ -1270,6 +1274,7 @@ deny 2a00:74a0:e000:1003::114;
 deny 2a00:99a0:0:1000::2;
 deny 2a00:c70:1:185:246:84:179:1;
 deny 2a01:270:9847::1;
+deny 2a01:4262:1ab:ffff::133;
 deny 2a01:4f9:2b:75d::124:148;
 deny 2a01:5e0:36:c311::1;
 deny 2a01:5e0:36:cf2a::1;
@@ -1585,6 +1590,20 @@ deny 2a0c:5700:3133:4000:be24:11ff:fe51:a829;
 deny 2a0c:5700:3133:650:b0ea:eeff:fedb:1f7b;
 deny 2a0c:5cc0:1:1::293c:1518;
 deny 2a0c:e300::23;
+deny 2a0d:bbc7:0:1::10a;
+deny 2a0d:bbc7:0:1::1df;
+deny 2a0d:bbc7:0:1::254;
+deny 2a0d:bbc7:0:1::2ef;
+deny 2a0d:bbc7:0:1::320;
+deny 2a0d:bbc7:0:1::328;
+deny 2a0d:bbc7:0:1::36c;
+deny 2a0d:bbc7:0:1::38c;
+deny 2a0d:bbc7:0:1::394;
+deny 2a0d:bbc7:0:1::3bd;
+deny 2a0d:bbc7:0:1::3cc;
+deny 2a0d:bbc7:0:1::3d5;
+deny 2a0d:bbc7:0:1::50;
+deny 2a0d:bbc7:0:1::7f;
 deny 2a0e:1d80:13:51e8::1;
 deny 2a0e:1d80:17:6f8d::1;
 deny 2a0e:4005:1002:ffff:185:40:4:100;
@@ -1758,6 +1777,7 @@ deny 45.148.10.169;
 deny 45.157.11.6;
 deny 45.61.185.172;
 deny 45.61.186.203;
+deny 45.61.187.200;
 deny 45.61.188.15;
 deny 45.66.35.10;
 deny 45.66.35.20;
@@ -1777,6 +1797,20 @@ deny 45.80.158.69;
 deny 45.8.22.207;
 deny 45.83.104.137;
 deny 45.83.21.193;
+deny 45.84.107.101;
+deny 45.84.107.128;
+deny 45.84.107.17;
+deny 45.84.107.172;
+deny 45.84.107.182;
+deny 45.84.107.198;
+deny 45.84.107.222;
+deny 45.84.107.33;
+deny 45.84.107.47;
+deny 45.84.107.54;
+deny 45.84.107.55;
+deny 45.84.107.74;
+deny 45.84.107.76;
+deny 45.84.107.97;
 deny 45.90.185.79;
 deny 45.9.148.50;
 deny 45.9.168.108;
@@ -1847,6 +1881,7 @@ deny 5.45.104.176;
 deny 5.45.98.162;
 deny 57.128.164.66;
 deny 5.79.66.19;
+deny 60.37.155.172;
 deny 62.133.45.2;
 deny 62.133.63.146;
 deny 62.171.137.169;
