--- a/set_real_ip_from-tor_ips.conf
+++ b/set_real_ip_from-tor_ips.conf
@@ -127,14 +127,12 @@ set_real_ip_from 118.163.74.160;
 set_real_ip_from 121.127.37.151;
 set_real_ip_from 121.78.28.166;
 set_real_ip_from 123.253.35.32;
-set_real_ip_from 124.86.79.94;
 set_real_ip_from 125.212.241.131;
 set_real_ip_from 128.127.180.156;
 set_real_ip_from 128.31.0.13;
 set_real_ip_from 130.193.10.21;
 set_real_ip_from 130.193.15.186;
 set_real_ip_from 130.193.15.79;
-set_real_ip_from 13.126.29.181;
 set_real_ip_from 135.225.96.187;
 set_real_ip_from 136.244.111.163;
 set_real_ip_from 138.59.18.110;
@@ -220,6 +218,7 @@ set_real_ip_from 172.245.33.159;
 set_real_ip_from 172.81.131.110;
 set_real_ip_from 172.81.131.139;
 set_real_ip_from 172.81.131.156;
+set_real_ip_from 172.81.132.185;
 set_real_ip_from 172.81.132.94;
 set_real_ip_from 173.0.3.111;
 set_real_ip_from 173.237.206.68;
@@ -960,6 +959,7 @@ set_real_ip_from 209.141.40.68;
 set_real_ip_from 209.141.45.141;
 set_real_ip_from 209.141.45.81;
 set_real_ip_from 209.141.46.203;
+set_real_ip_from 209.141.51.180;
 set_real_ip_from 209.141.54.203;
 set_real_ip_from 209.141.54.218;
 set_real_ip_from 209.141.55.26;
@@ -978,6 +978,7 @@ set_real_ip_from 217.199.199.250;
 set_real_ip_from 23.137.248.100;
 set_real_ip_from 23.137.248.192;
 set_real_ip_from 23.137.250.83;
+set_real_ip_from 23.137.253.109;
 set_real_ip_from 23.137.253.254;
 set_real_ip_from 23.137.253.27;
 set_real_ip_from 23.137.254.137;
@@ -1060,6 +1061,7 @@ set_real_ip_from 2602:fc24:12:9fef::1;
 set_real_ip_from 2602:fc24:12:a679::1;
 set_real_ip_from 2602:fc24:18:f38f::1;
 set_real_ip_from 2602:fc24:18:f84a::1;
+set_real_ip_from 2602:fc24:19:1c9::1;
 set_real_ip_from 2602:fc24:19:524::1;
 set_real_ip_from 2602:fc24:19:eb06::dead;
 set_real_ip_from 2602:fef9:100:1100::199;
@@ -1141,10 +1143,12 @@ set_real_ip_from 2605:6400:30:f8d5::1;
 set_real_ip_from 2605:6400:30:f8da:2b2:a293:30ad:506d;
 set_real_ip_from 2605:6400:30:f91b:8124:6a51:9ea2:5d13;
 set_real_ip_from 2605:6400:30:f920:f523:28ef:3617:8b86;
+set_real_ip_from 2605:6400:40:fde8:11c7:119b:aaf9:2722;
 set_real_ip_from 2605:6400:40:fe09::2;
 set_real_ip_from 2605:6400:d814:1b8::4;
 set_real_ip_from 2605:6400:d814:1d1::100;
 set_real_ip_from 2605:aa80:0:9::3;
+set_real_ip_from 2605:aa80:3:87c9::1;
 set_real_ip_from 2607:5300:120:c74::1;
 set_real_ip_from 2607:5300:201:3100::35c5;
 set_real_ip_from 2607:5300:205:200::4894;
@@ -1270,6 +1274,7 @@ set_real_ip_from 2a00:74a0:e000:1003::114;
 set_real_ip_from 2a00:99a0:0:1000::2;
 set_real_ip_from 2a00:c70:1:185:246:84:179:1;
 set_real_ip_from 2a01:270:9847::1;
+set_real_ip_from 2a01:4262:1ab:ffff::133;
 set_real_ip_from 2a01:4f9:2b:75d::124:148;
 set_real_ip_from 2a01:5e0:36:c311::1;
 set_real_ip_from 2a01:5e0:36:cf2a::1;
@@ -1585,6 +1590,20 @@ set_real_ip_from 2a0c:5700:3133:4000:be24:11ff:fe51:a829;
 set_real_ip_from 2a0c:5700:3133:650:b0ea:eeff:fedb:1f7b;
 set_real_ip_from 2a0c:5cc0:1:1::293c:1518;
 set_real_ip_from 2a0c:e300::23;
+set_real_ip_from 2a0d:bbc7:0:1::10a;
+set_real_ip_from 2a0d:bbc7:0:1::1df;
+set_real_ip_from 2a0d:bbc7:0:1::254;
+set_real_ip_from 2a0d:bbc7:0:1::2ef;
+set_real_ip_from 2a0d:bbc7:0:1::320;
+set_real_ip_from 2a0d:bbc7:0:1::328;
+set_real_ip_from 2a0d:bbc7:0:1::36c;
+set_real_ip_from 2a0d:bbc7:0:1::38c;
+set_real_ip_from 2a0d:bbc7:0:1::394;
+set_real_ip_from 2a0d:bbc7:0:1::3bd;
+set_real_ip_from 2a0d:bbc7:0:1::3cc;
+set_real_ip_from 2a0d:bbc7:0:1::3d5;
+set_real_ip_from 2a0d:bbc7:0:1::50;
+set_real_ip_from 2a0d:bbc7:0:1::7f;
 set_real_ip_from 2a0e:1d80:13:51e8::1;
 set_real_ip_from 2a0e:1d80:17:6f8d::1;
 set_real_ip_from 2a0e:4005:1002:ffff:185:40:4:100;
@@ -1758,6 +1777,7 @@ set_real_ip_from 45.148.10.169;
 set_real_ip_from 45.157.11.6;
 set_real_ip_from 45.61.185.172;
 set_real_ip_from 45.61.186.203;
+set_real_ip_from 45.61.187.200;
 set_real_ip_from 45.61.188.15;
 set_real_ip_from 45.66.35.10;
 set_real_ip_from 45.66.35.20;
@@ -1777,6 +1797,20 @@ set_real_ip_from 45.80.158.69;
 set_real_ip_from 45.8.22.207;
 set_real_ip_from 45.83.104.137;
 set_real_ip_from 45.83.21.193;
+set_real_ip_from 45.84.107.101;
+set_real_ip_from 45.84.107.128;
+set_real_ip_from 45.84.107.17;
+set_real_ip_from 45.84.107.172;
+set_real_ip_from 45.84.107.182;
+set_real_ip_from 45.84.107.198;
+set_real_ip_from 45.84.107.222;
+set_real_ip_from 45.84.107.33;
+set_real_ip_from 45.84.107.47;
+set_real_ip_from 45.84.107.54;
+set_real_ip_from 45.84.107.55;
+set_real_ip_from 45.84.107.74;
+set_real_ip_from 45.84.107.76;
+set_real_ip_from 45.84.107.97;
 set_real_ip_from 45.90.185.79;
 set_real_ip_from 45.9.148.50;
 set_real_ip_from 45.9.168.108;
@@ -1847,6 +1881,7 @@ set_real_ip_from 5.45.104.176;
 set_real_ip_from 5.45.98.162;
 set_real_ip_from 57.128.164.66;
 set_real_ip_from 5.79.66.19;
+set_real_ip_from 60.37.155.172;
 set_real_ip_from 62.133.45.2;
 set_real_ip_from 62.133.63.146;
 set_real_ip_from 62.171.137.169;
