--- a/deny-tor_ips_v6.conf
+++ b/deny-tor_ips_v6.conf
@@ -363,7 +363,6 @@ deny 2a01:7e00::f03c:91ff:fe56:2656;
 deny 2a01:7e00::f03c:91ff:fe78:b382;
 deny 2a01:7e01::f03c:95ff:fe64:90e3;
 deny 2a02:16d0:0:5::1;
-deny 2a02:2970:1001::4b;
 deny 2a02:2b88:2:6ce::1;
 deny 2a02:418:6017::147;
 deny 2a02:418:6017::148;
@@ -426,7 +425,6 @@ deny 2a04:52c0:103:5acd::1;
 deny 2a04:52c0:104:4735::1;
 deny 2a04:52c0:104:ad97::1;
 deny 2a04:52c0:105:98a3::1;
-deny 2a04:52c0:105:d7eb::1;
 deny 2a04:52c0:108:a34f::1;
 deny 2a04:52c0:116:e0e3::1;
 deny 2a04:52c0:123:c6c3::1;
@@ -670,6 +668,20 @@ deny 2a0c:5700:3133:4000:be24:11ff:fe51:a829;
 deny 2a0c:5700:3133:650:b0ea:eeff:fedb:1f7b;
 deny 2a0c:5cc0:1:1::293c:1518;
 deny 2a0c:e300::23;
+deny 2a0d:bbc7:0:1::10a;
+deny 2a0d:bbc7:0:1::1df;
+deny 2a0d:bbc7:0:1::254;
+deny 2a0d:bbc7:0:1::2ef;
+deny 2a0d:bbc7:0:1::320;
+deny 2a0d:bbc7:0:1::328;
+deny 2a0d:bbc7:0:1::36c;
+deny 2a0d:bbc7:0:1::38c;
+deny 2a0d:bbc7:0:1::394;
+deny 2a0d:bbc7:0:1::3bd;
+deny 2a0d:bbc7:0:1::3cc;
+deny 2a0d:bbc7:0:1::3d5;
+deny 2a0d:bbc7:0:1::50;
+deny 2a0d:bbc7:0:1::7f;
 deny 2a0e:1d80:13:51e8::1;
 deny 2a0e:1d80:17:6f8d::1;
 deny 2a0e:4005:1002:ffff:185:40:4:100;
@@ -698,8 +710,6 @@ deny 2a0f:85c1:356:5bdd::beef;
 deny 2a0f:ca80:1337::9bb3:5385;
 deny 2a0f:ca80:1337::b5a4:a762;
 deny 2a0f:ca80:1337::cd4a:eb83;
-deny 2a0f:df00:0:255::194;
-deny 2a0f:df00:0:255::195;
 deny 2a0f:df00:0:255::201;
 deny 2a0f:df00:0:255::202;
 deny 2a0f:df00:0:255::203;
