--- a/deny-tor_ips.conf
+++ b/deny-tor_ips.conf
@@ -121,6 +121,7 @@ deny 109.70.100.68;
 deny 109.70.100.69;
 deny 109.70.100.70;
 deny 109.70.100.71;
+deny 113.20.31.38;
 deny 114.35.245.150;
 deny 118.163.74.160;
 deny 118.193.64.139;
@@ -637,8 +638,6 @@ deny 192.42.116.28;
 deny 192.99.149.111;
 deny 193.105.134.150;
 deny 193.105.134.155;
-deny 193.189.100.194;
-deny 193.189.100.195;
 deny 193.189.100.201;
 deny 193.189.100.202;
 deny 193.189.100.203;
@@ -1280,7 +1279,6 @@ deny 2a01:7e00::f03c:91ff:fe56:2656;
 deny 2a01:7e00::f03c:91ff:fe78:b382;
 deny 2a01:7e01::f03c:95ff:fe64:90e3;
 deny 2a02:16d0:0:5::1;
-deny 2a02:2970:1001::4b;
 deny 2a02:2b88:2:6ce::1;
 deny 2a02:418:6017::147;
 deny 2a02:418:6017::148;
@@ -1343,7 +1341,6 @@ deny 2a04:52c0:103:5acd::1;
 deny 2a04:52c0:104:4735::1;
 deny 2a04:52c0:104:ad97::1;
 deny 2a04:52c0:105:98a3::1;
-deny 2a04:52c0:105:d7eb::1;
 deny 2a04:52c0:108:a34f::1;
 deny 2a04:52c0:116:e0e3::1;
 deny 2a04:52c0:123:c6c3::1;
@@ -1587,6 +1584,20 @@ deny 2a0c:5700:3133:4000:be24:11ff:fe51:a829;
 deny 2a0c:5700:3133:650:b0ea:eeff:fedb:1f7b;
 deny 2a0c:5cc0:1:1::293c:1518;
 deny 2a0c:e300::23;
+deny 2a0d:bbc7:0:1::10a;
+deny 2a0d:bbc7:0:1::1df;
+deny 2a0d:bbc7:0:1::254;
+deny 2a0d:bbc7:0:1::2ef;
+deny 2a0d:bbc7:0:1::320;
+deny 2a0d:bbc7:0:1::328;
+deny 2a0d:bbc7:0:1::36c;
+deny 2a0d:bbc7:0:1::38c;
+deny 2a0d:bbc7:0:1::394;
+deny 2a0d:bbc7:0:1::3bd;
+deny 2a0d:bbc7:0:1::3cc;
+deny 2a0d:bbc7:0:1::3d5;
+deny 2a0d:bbc7:0:1::50;
+deny 2a0d:bbc7:0:1::7f;
 deny 2a0e:1d80:13:51e8::1;
 deny 2a0e:1d80:17:6f8d::1;
 deny 2a0e:4005:1002:ffff:185:40:4:100;
@@ -1615,8 +1626,6 @@ deny 2a0f:85c1:356:5bdd::beef;
 deny 2a0f:ca80:1337::9bb3:5385;
 deny 2a0f:ca80:1337::b5a4:a762;
 deny 2a0f:ca80:1337::cd4a:eb83;
-deny 2a0f:df00:0:255::194;
-deny 2a0f:df00:0:255::195;
 deny 2a0f:df00:0:255::201;
 deny 2a0f:df00:0:255::202;
 deny 2a0f:df00:0:255::203;
@@ -1776,6 +1785,20 @@ deny 45.80.158.69;
 deny 45.8.22.207;
 deny 45.83.104.137;
 deny 45.83.21.193;
+deny 45.84.107.101;
+deny 45.84.107.128;
+deny 45.84.107.17;
+deny 45.84.107.172;
+deny 45.84.107.182;
+deny 45.84.107.198;
+deny 45.84.107.222;
+deny 45.84.107.33;
+deny 45.84.107.47;
+deny 45.84.107.54;
+deny 45.84.107.55;
+deny 45.84.107.74;
+deny 45.84.107.76;
+deny 45.84.107.97;
 deny 45.90.185.79;
 deny 45.9.148.50;
 deny 45.9.168.108;
@@ -1789,7 +1812,6 @@ deny 45.95.169.230;
 deny 45.95.169.24;
 deny 45.95.169.255;
 deny 46.165.243.36;
-deny 46.182.21.248;
 deny 46.23.109.25;
 deny 46.232.251.191;
 deny 46.234.47.105;
@@ -1814,7 +1836,6 @@ deny 51.89.136.168;
 deny 51.91.18.151;
 deny 5.196.95.34;
 deny 5.255.100.227;
-deny 5.255.100.26;
 deny 5.255.103.235;
 deny 5.255.104.202;
 deny 5.255.111.64;
@@ -1847,7 +1868,6 @@ deny 5.45.104.176;
 deny 5.45.98.162;
 deny 57.128.164.66;
 deny 5.79.66.19;
-deny 60.37.155.172;
 deny 62.133.45.2;
 deny 62.133.63.146;
 deny 62.171.137.169;
