--- a/set_real_ip_from-tor_ips.conf
+++ b/set_real_ip_from-tor_ips.conf
@@ -121,6 +121,7 @@ set_real_ip_from 109.70.100.68;
 set_real_ip_from 109.70.100.69;
 set_real_ip_from 109.70.100.70;
 set_real_ip_from 109.70.100.71;
+set_real_ip_from 113.20.31.38;
 set_real_ip_from 114.35.245.150;
 set_real_ip_from 118.163.74.160;
 set_real_ip_from 118.193.64.139;
@@ -637,8 +638,6 @@ set_real_ip_from 192.42.116.28;
 set_real_ip_from 192.99.149.111;
 set_real_ip_from 193.105.134.150;
 set_real_ip_from 193.105.134.155;
-set_real_ip_from 193.189.100.194;
-set_real_ip_from 193.189.100.195;
 set_real_ip_from 193.189.100.201;
 set_real_ip_from 193.189.100.202;
 set_real_ip_from 193.189.100.203;
@@ -1280,7 +1279,6 @@ set_real_ip_from 2a01:7e00::f03c:91ff:fe56:2656;
 set_real_ip_from 2a01:7e00::f03c:91ff:fe78:b382;
 set_real_ip_from 2a01:7e01::f03c:95ff:fe64:90e3;
 set_real_ip_from 2a02:16d0:0:5::1;
-set_real_ip_from 2a02:2970:1001::4b;
 set_real_ip_from 2a02:2b88:2:6ce::1;
 set_real_ip_from 2a02:418:6017::147;
 set_real_ip_from 2a02:418:6017::148;
@@ -1343,7 +1341,6 @@ set_real_ip_from 2a04:52c0:103:5acd::1;
 set_real_ip_from 2a04:52c0:104:4735::1;
 set_real_ip_from 2a04:52c0:104:ad97::1;
 set_real_ip_from 2a04:52c0:105:98a3::1;
-set_real_ip_from 2a04:52c0:105:d7eb::1;
 set_real_ip_from 2a04:52c0:108:a34f::1;
 set_real_ip_from 2a04:52c0:116:e0e3::1;
 set_real_ip_from 2a04:52c0:123:c6c3::1;
@@ -1587,6 +1584,20 @@ set_real_ip_from 2a0c:5700:3133:4000:be24:11ff:fe51:a829;
 set_real_ip_from 2a0c:5700:3133:650:b0ea:eeff:fedb:1f7b;
 set_real_ip_from 2a0c:5cc0:1:1::293c:1518;
 set_real_ip_from 2a0c:e300::23;
+set_real_ip_from 2a0d:bbc7:0:1::10a;
+set_real_ip_from 2a0d:bbc7:0:1::1df;
+set_real_ip_from 2a0d:bbc7:0:1::254;
+set_real_ip_from 2a0d:bbc7:0:1::2ef;
+set_real_ip_from 2a0d:bbc7:0:1::320;
+set_real_ip_from 2a0d:bbc7:0:1::328;
+set_real_ip_from 2a0d:bbc7:0:1::36c;
+set_real_ip_from 2a0d:bbc7:0:1::38c;
+set_real_ip_from 2a0d:bbc7:0:1::394;
+set_real_ip_from 2a0d:bbc7:0:1::3bd;
+set_real_ip_from 2a0d:bbc7:0:1::3cc;
+set_real_ip_from 2a0d:bbc7:0:1::3d5;
+set_real_ip_from 2a0d:bbc7:0:1::50;
+set_real_ip_from 2a0d:bbc7:0:1::7f;
 set_real_ip_from 2a0e:1d80:13:51e8::1;
 set_real_ip_from 2a0e:1d80:17:6f8d::1;
 set_real_ip_from 2a0e:4005:1002:ffff:185:40:4:100;
@@ -1615,8 +1626,6 @@ set_real_ip_from 2a0f:85c1:356:5bdd::beef;
 set_real_ip_from 2a0f:ca80:1337::9bb3:5385;
 set_real_ip_from 2a0f:ca80:1337::b5a4:a762;
 set_real_ip_from 2a0f:ca80:1337::cd4a:eb83;
-set_real_ip_from 2a0f:df00:0:255::194;
-set_real_ip_from 2a0f:df00:0:255::195;
 set_real_ip_from 2a0f:df00:0:255::201;
 set_real_ip_from 2a0f:df00:0:255::202;
 set_real_ip_from 2a0f:df00:0:255::203;
@@ -1776,6 +1785,20 @@ set_real_ip_from 45.80.158.69;
 set_real_ip_from 45.8.22.207;
 set_real_ip_from 45.83.104.137;
 set_real_ip_from 45.83.21.193;
+set_real_ip_from 45.84.107.101;
+set_real_ip_from 45.84.107.128;
+set_real_ip_from 45.84.107.17;
+set_real_ip_from 45.84.107.172;
+set_real_ip_from 45.84.107.182;
+set_real_ip_from 45.84.107.198;
+set_real_ip_from 45.84.107.222;
+set_real_ip_from 45.84.107.33;
+set_real_ip_from 45.84.107.47;
+set_real_ip_from 45.84.107.54;
+set_real_ip_from 45.84.107.55;
+set_real_ip_from 45.84.107.74;
+set_real_ip_from 45.84.107.76;
+set_real_ip_from 45.84.107.97;
 set_real_ip_from 45.90.185.79;
 set_real_ip_from 45.9.148.50;
 set_real_ip_from 45.9.168.108;
@@ -1789,7 +1812,6 @@ set_real_ip_from 45.95.169.230;
 set_real_ip_from 45.95.169.24;
 set_real_ip_from 45.95.169.255;
 set_real_ip_from 46.165.243.36;
-set_real_ip_from 46.182.21.248;
 set_real_ip_from 46.23.109.25;
 set_real_ip_from 46.232.251.191;
 set_real_ip_from 46.234.47.105;
@@ -1814,7 +1836,6 @@ set_real_ip_from 51.89.136.168;
 set_real_ip_from 51.91.18.151;
 set_real_ip_from 5.196.95.34;
 set_real_ip_from 5.255.100.227;
-set_real_ip_from 5.255.100.26;
 set_real_ip_from 5.255.103.235;
 set_real_ip_from 5.255.104.202;
 set_real_ip_from 5.255.111.64;
@@ -1847,7 +1868,6 @@ set_real_ip_from 5.45.104.176;
 set_real_ip_from 5.45.98.162;
 set_real_ip_from 57.128.164.66;
 set_real_ip_from 5.79.66.19;
-set_real_ip_from 60.37.155.172;
 set_real_ip_from 62.133.45.2;
 set_real_ip_from 62.133.63.146;
 set_real_ip_from 62.171.137.169;
