--- a/deny-tor_ips.conf
+++ b/deny-tor_ips.conf
@@ -123,7 +123,6 @@ deny 109.70.100.70;
 deny 109.70.100.71;
 deny 113.20.31.38;
 deny 114.35.245.150;
-deny 118.163.74.160;
 deny 118.193.64.139;
 deny 121.127.37.151;
 deny 121.78.28.166;
@@ -690,7 +689,7 @@ deny 195.80.151.242;
 deny 195.88.74.206;
 deny 198.144.178.185;
 deny 198.144.178.187;
-deny 198.167.206.177;
+deny 198.167.206.166;
 deny 198.251.84.163;
 deny 198.251.84.237;
 deny 198.251.88.18;
@@ -824,7 +823,6 @@ deny 2001:910:1400:107::2;
 deny 2001:9b0:25b:f700:7fb0:98ab:2ba2:2ae5;
 deny 2001:ac8:22:43::20e5:a7d7;
 deny 2001:b011:4006:3514::b;
-deny 2001:b030:2422::7234;
 deny 2001:bc8:1640:317d:dc00:ff:fe39:7bb3;
 deny 2001:bf0:666::666;
 deny 2001:df7:7400:c10d:216:3eff:fecd:511a;
@@ -1279,6 +1277,7 @@ deny 2a01:7e00::f03c:91ff:fe56:2656;
 deny 2a01:7e00::f03c:91ff:fe78:b382;
 deny 2a01:7e01::f03c:95ff:fe64:90e3;
 deny 2a02:16d0:0:5::1;
+deny 2a02:2970:1001::4b;
 deny 2a02:2b88:2:6ce::1;
 deny 2a02:418:6017::147;
 deny 2a02:418:6017::148;
@@ -1643,6 +1642,7 @@ deny 2a0f:e586:f:f:b1ac:d060:1ef8:40de;
 deny 2a0f:e586:f:f:baa4:d491:90be:dca5;
 deny 2a0f:e586:f:f:c94a:de42:aac1:9045;
 deny 2a0f:e586:f:f:e356:1bda:fc05:6784;
+deny 2a10:1fc0:10::ce18:9bf9;
 deny 2a10:8a40:f313::29;
 deny 2a10:c800:1:9cc6::1;
 deny 2a10:c800:1:f7f8:0:1ce:1ce:babe;
@@ -1812,6 +1812,7 @@ deny 45.95.169.230;
 deny 45.95.169.24;
 deny 45.95.169.255;
 deny 46.165.243.36;
+deny 46.182.21.248;
 deny 46.23.109.25;
 deny 46.232.251.191;
 deny 46.234.47.105;
@@ -1918,6 +1919,7 @@ deny 84.211.226.13;
 deny 84.239.46.144;
 deny 84.247.183.128;
 deny 85.239.41.130;
+deny 85.239.55.172;
 deny 85.93.218.204;
 deny 86.54.28.49;
 deny 87.118.110.27;
@@ -1961,7 +1963,6 @@ deny 92.243.24.163;
 deny 92.246.138.145;
 deny 93.123.109.116;
 deny 93.123.12.112;
-deny 93.148.86.47;
 deny 93.185.165.211;
 deny 93.95.227.37;
 deny 93.95.228.125;
