--- a/deny-tor_ips.conf
+++ b/deny-tor_ips.conf
@@ -122,7 +122,6 @@ deny 109.70.100.70;
 deny 109.70.100.71;
 deny 113.20.31.38;
 deny 114.35.245.150;
-deny 118.163.74.160;
 deny 118.193.64.139;
 deny 121.127.37.151;
 deny 121.78.28.166;
@@ -820,8 +819,7 @@ deny 2001:67c:e28:1::4;
 deny 2001:910:1400:107::2;
 deny 2001:9b0:25b:f700:7fb0:98ab:2ba2:2ae5;
 deny 2001:ac8:22:43::20e5:a7d7;
-deny 2001:b011:4006:7da7::b;
-deny 2001:b030:2422::7234;
+deny 2001:b011:4006:d5b3::b;
 deny 2001:bc8:1640:317d:dc00:ff:fe39:7bb3;
 deny 2001:bf0:666::666;
 deny 2001:df7:7400:c10d:216:3eff:fecd:511a;
@@ -1337,6 +1335,7 @@ deny 2a04:52c0:103:5acd::1;
 deny 2a04:52c0:104:4735::1;
 deny 2a04:52c0:104:ad97::1;
 deny 2a04:52c0:105:98a3::1;
+deny 2a04:52c0:105:d7eb::1;
 deny 2a04:52c0:108:a34f::1;
 deny 2a04:52c0:116:e0e3::1;
 deny 2a04:52c0:123:c6c3::1;
@@ -1840,6 +1839,7 @@ deny 51.89.136.168;
 deny 51.91.18.151;
 deny 5.196.95.34;
 deny 5.255.100.227;
+deny 5.255.100.26;
 deny 5.255.103.235;
 deny 5.255.104.202;
 deny 5.255.111.64;
