--- a/deny-tor_ips.conf
+++ b/deny-tor_ips.conf
@@ -122,6 +122,7 @@ deny 109.70.100.70;
 deny 109.70.100.71;
 deny 113.20.31.38;
 deny 114.35.245.150;
+deny 118.163.74.160;
 deny 118.193.64.139;
 deny 121.127.37.151;
 deny 121.78.28.166;
@@ -663,7 +664,6 @@ deny 194.15.115.212;
 deny 194.163.130.99;
 deny 194.163.157.49;
 deny 194.26.192.77;
-deny 194.53.137.156;
 deny 195.160.220.104;
 deny 195.176.3.23;
 deny 195.176.3.24;
@@ -820,6 +820,7 @@ deny 2001:910:1400:107::2;
 deny 2001:9b0:25b:f700:7fb0:98ab:2ba2:2ae5;
 deny 2001:ac8:22:43::20e5:a7d7;
 deny 2001:b011:4006:d5b3::b;
+deny 2001:b030:2422::7234;
 deny 2001:bc8:1640:317d:dc00:ff:fe39:7bb3;
 deny 2001:bf0:666::666;
 deny 2001:df7:7400:c10d:216:3eff:fecd:511a;
@@ -1581,7 +1582,6 @@ deny 2a0c:5cc0:1:1::293c:1518;
 deny 2a0c:e300::23;
 deny 2a0d:8140:1fff:22d0::1;
 deny 2a0d:8140:1fff:395e::1;
-deny 2a0d:8140:1fff:4a9a::1;
 deny 2a0d:bbc7:0:1::10a;
 deny 2a0d:bbc7:0:1::1df;
 deny 2a0d:bbc7:0:1::254;
@@ -1596,7 +1596,6 @@ deny 2a0d:bbc7:0:1::3cc;
 deny 2a0d:bbc7:0:1::3d5;
 deny 2a0d:bbc7:0:1::50;
 deny 2a0d:bbc7:0:1::7f;
-deny 2a0e:1d80:13:51e8::1;
 deny 2a0e:1d80:17:6f8d::1;
 deny 2a0e:4005:1002:ffff:185:40:4:100;
 deny 2a0e:4005:1002:ffff:185:40:4:101;
@@ -1725,7 +1724,6 @@ deny 45.130.60.248;
 deny 45.132.246.245;
 deny 45.134.225.36;
 deny 45.137.99.10;
-deny 45.137.99.14;
 deny 45.137.99.216;
 deny 45.138.16.107;
 deny 45.138.16.113;
