--- a/allow-tor_ips_v4.conf
+++ b/allow-tor_ips_v4.conf
@@ -1119,6 +1119,7 @@ allow 82.221.131.86;
 allow 82.221.139.190;
 allow 83.217.9.73;
 allow 83.96.213.63;
+allow 83.97.20.77;
 allow 84.16.224.227;
 allow 84.19.182.20;
 allow 84.211.226.13;
