--- a/deny-tor_ips.conf
+++ b/deny-tor_ips.conf
@@ -1328,6 +1328,7 @@ deny 2a04:52c0:103:5acd::1;
 deny 2a04:52c0:104:4735::1;
 deny 2a04:52c0:104:ad97::1;
 deny 2a04:52c0:105:98a3::1;
+deny 2a04:52c0:105:d7eb::1;
 deny 2a04:52c0:108:a34f::1;
 deny 2a04:52c0:116:e0e3::1;
 deny 2a04:52c0:123:c6c3::1;
@@ -1827,6 +1828,7 @@ deny 51.89.136.168;
 deny 51.91.18.151;
 deny 5.196.95.34;
 deny 5.255.100.227;
+deny 5.255.100.26;
 deny 5.255.103.235;
 deny 5.255.104.202;
 deny 5.255.111.64;
