--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -4,7 +4,6 @@ allow 102.130.127.117;
 allow 102.211.56.105;
 allow 102.211.56.12;
 allow 102.211.56.13;
-allow 102.211.56.250;
 allow 103.109.101.105;
 allow 103.146.203.11;
 allow 103.164.54.199;
@@ -104,6 +103,7 @@ allow 109.172.84.107;
 allow 109.199.101.106;
 allow 109.199.101.134;
 allow 109.199.105.142;
+allow 109.228.160.190;
 allow 109.69.67.17;
 allow 109.70.100.1;
 allow 109.70.100.2;
@@ -119,7 +119,6 @@ allow 109.70.100.69;
 allow 109.70.100.70;
 allow 109.70.100.71;
 allow 113.20.31.38;
-allow 114.145.199.232;
 allow 114.35.245.150;
 allow 118.163.74.160;
 allow 118.193.64.139;
@@ -162,7 +161,6 @@ allow 149.56.44.47;
 allow 152.32.181.53;
 allow 152.32.199.79;
 allow 152.32.206.127;
-allow 152.53.133.14;
 allow 152.53.53.243;
 allow 154.16.116.61;
 allow 154.26.159.157;
@@ -726,6 +724,7 @@ allow 2001:41d0:304:200::3348;
 allow 2001:41d0:304:200::3ea4;
 allow 2001:41d0:304:200::83a5;
 allow 2001:41d0:304:200::9dce;
+allow 2001:41d0:304:200::a520;
 allow 2001:41d0:304:300::5bb5;
 allow 2001:41d0:304:300::74bf;
 allow 2001:41d0:601:1100::6524;
@@ -818,6 +817,7 @@ allow 2001:67c:e28:1::2;
 allow 2001:67c:e28:1::3;
 allow 2001:67c:e28:1::4;
 allow 2001:910:1400:107::2;
+allow 2001:9b0:25b:f700:82c6:bb33:9354:74c1;
 allow 2001:ac8:22:43::20e5:a7d7;
 allow 2001:b011:4006:d5b3::b;
 allow 2001:b030:2422::7234;
@@ -1268,7 +1268,6 @@ allow 2a01:7e00::f03c:91ff:fe56:2656;
 allow 2a01:7e00::f03c:91ff:fe78:b382;
 allow 2a01:7e01::f03c:95ff:fe64:90e3;
 allow 2a02:16d0:0:5::1;
-allow 2a02:2970:1001::4b;
 allow 2a02:2b88:2:6ce::1;
 allow 2a02:418:6017::147;
 allow 2a02:418:6017::148;
@@ -1376,7 +1375,6 @@ allow 2a09:61c0::21;
 allow 2a09:61c0::22;
 allow 2a09:61c0::beef;
 allow 2a09:b280:fe01:61::a;
-allow 2a0a:4cc0:c0:130c:14c3:a0ff:fe24:7692;
 allow 2a0b:7140:1:1:5054:ff:fe12:2305;
 allow 2a0b:7140:6:1:5054:ff:fed8:5956;
 allow 2a0b:7140:8:1:5054:ff:fe43:9f9;
@@ -1799,12 +1797,10 @@ allow 45.9.168.22;
 allow 45.94.31.68;
 allow 45.95.169.104;
 allow 45.95.169.130;
-allow 45.95.169.16;
 allow 45.95.169.230;
 allow 45.95.169.24;
 allow 45.95.169.255;
 allow 46.165.243.36;
-allow 46.182.21.248;
 allow 46.23.109.25;
 allow 46.232.251.191;
 allow 46.234.47.105;
@@ -1821,6 +1817,7 @@ allow 51.222.142.67;
 allow 51.38.225.46;
 allow 51.68.189.231;
 allow 51.75.201.67;
+allow 51.75.206.16;
 allow 51.79.24.181;
 allow 51.79.30.185;
 allow 51.81.222.62;
@@ -1862,6 +1859,7 @@ allow 5.45.104.176;
 allow 5.45.98.162;
 allow 57.128.164.66;
 allow 5.79.66.19;
+allow 60.45.27.132;
 allow 62.133.45.2;
 allow 62.133.63.146;
 allow 62.171.137.169;
