--- a/deny-tor_ips.conf
+++ b/deny-tor_ips.conf
@@ -5,6 +5,7 @@ deny 102.211.56.102;
 deny 102.211.56.105;
 deny 102.211.56.12;
 deny 102.211.56.13;
+deny 102.211.56.250;
 deny 103.109.101.105;
 deny 103.146.203.11;
 deny 103.164.54.199;
@@ -1329,12 +1330,18 @@ deny 2a04:52c0:101:46a::;
 deny 2a04:52c0:102:46e0::1;
 deny 2a04:52c0:103:412::1;
 deny 2a04:52c0:103:5acd::1;
+deny 2a04:52c0:104:31e6::1;
 deny 2a04:52c0:104:4735::1;
 deny 2a04:52c0:104:ad97::1;
 deny 2a04:52c0:105:78fc::1;
+deny 2a04:52c0:105:82c0::1;
 deny 2a04:52c0:105:98a3::1;
+deny 2a04:52c0:105:d7eb::1;
+deny 2a04:52c0:106:394::1;
+deny 2a04:52c0:106:d219::1;
 deny 2a04:52c0:108:a34f::1;
 deny 2a04:52c0:116:e0e3::1;
+deny 2a04:52c0:119:3f0b::1;
 deny 2a04:52c0:123:c6c3::1;
 deny 2a04:52c0:126:3ab8::1;
 deny 2a04:52c0:128:c6e7:50ef:cafe:babe:1337;
@@ -1638,7 +1645,6 @@ deny 2a0f:e586:f:f:c94a:de42:aac1:9045;
 deny 2a0f:e586:f:f:e356:1bda:fc05:6784;
 deny 2a10:8a40:f313::29;
 deny 2a10:c800:1:9cc6::1;
-deny 2a10:c800:1:f7f8:0:1ce:1ce:babe;
 deny 2a11:6100:0:22:a236:9fff:fe9e:36ea;
 deny 2a12:a800:1:1:194:26:192:77;
 deny 2a12:a800:1:1:2:58:56:220;
@@ -1730,7 +1736,6 @@ deny 45.138.16.240;
 deny 45.138.16.248;
 deny 45.138.16.42;
 deny 45.138.16.76;
-deny 45.138.87.142;
 deny 45.139.50.202;
 deny 45.141.215.110;
 deny 45.141.215.111;
@@ -1829,10 +1834,15 @@ deny 51.89.136.168;
 deny 51.91.18.151;
 deny 5.196.95.34;
 deny 5.255.100.219;
+deny 5.255.100.224;
 deny 5.255.100.227;
+deny 5.255.100.26;
+deny 5.255.101.10;
+deny 5.255.101.131;
 deny 5.255.103.235;
 deny 5.255.104.202;
 deny 5.255.111.64;
+deny 5.255.114.171;
 deny 5.255.115.58;
 deny 5.255.117.56;
 deny 5.255.118.218;
@@ -1847,6 +1857,7 @@ deny 5.255.97.221;
 deny 5.255.98.151;
 deny 5.255.98.198;
 deny 5.255.98.23;
+deny 5.255.99.124;
 deny 5.255.99.147;
 deny 5.255.99.5;
 deny 5.2.67.226;
@@ -1948,8 +1959,6 @@ deny 91.208.75.239;
 deny 91.208.75.3;
 deny 91.208.75.4;
 deny 91.219.236.101;
-deny 91.219.236.91;
-deny 91.219.237.39;
 deny 91.92.109.126;
 deny 91.92.109.43;
 deny 92.243.24.163;
