--- a/allow-tor_ips_v6.conf
+++ b/allow-tor_ips_v6.conf
@@ -353,6 +353,7 @@ allow 2a00:c70:1:185:246:84:179:1;
 allow 2a01:270:9847::1;
 allow 2a01:4262:1ab:ffff::133;
 allow 2a01:4f9:2b:75d::124:148;
+allow 2a01:4f9:c012:893a::1;
 allow 2a01:5e0:36:c311::1;
 allow 2a01:5e0:36:cf2a::1;
 allow 2a01:6340:2:501::10;
@@ -715,6 +716,13 @@ allow 2a0f:85c1:356:424c::1;
 allow 2a0f:85c1:356:5bdd::beef;
 allow 2a0f:ca80:1337::b5a4:a762;
 allow 2a0f:ca80:1337::cd4a:eb83;
+allow 2a0f:df00:0:255::194;
+allow 2a0f:df00:0:255::195;
+allow 2a0f:df00:0:255::196;
+allow 2a0f:df00:0:255::197;
+allow 2a0f:df00:0:255::198;
+allow 2a0f:df00:0:255::199;
+allow 2a0f:df00:0:255::200;
 allow 2a0f:df00:0:255::201;
 allow 2a0f:df00:0:255::202;
 allow 2a0f:df00:0:255::203;
