Update lists at 20250402-0900

--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -743,6 +743,7 @@ allow 2001:41d0:304:200::a520;
 allow 2001:41d0:304:300::5bb5;
 allow 2001:41d0:304:300::74bf;
 allow 2001:41d0:601:1100::6524;
+allow 2001:41d0:701:1100::912e;
 allow 2001:41d0:801:1000::1b55;
 allow 2001:41d0:801:1000::c2;
 allow 2001:41d0:a:2a61::1;
@@ -1285,7 +1286,6 @@ allow 2a01:7e00::f03c:91ff:fe56:2656;
 allow 2a01:7e00::f03c:91ff:fe78:b382;
 allow 2a01:7e01::f03c:95ff:fe64:90e3;
 allow 2a02:16d0:0:5::1;
-allow 2a02:2970:1001::4b;
 allow 2a02:2b88:2:6ce::1;
 allow 2a02:418:6017::147;
 allow 2a02:418:6017::148;
@@ -1829,7 +1829,6 @@ allow 45.95.169.230;
 allow 45.95.169.24;
 allow 45.95.169.255;
 allow 46.165.243.36;
-allow 46.182.21.248;
 allow 46.23.109.25;
 allow 46.232.251.191;
 allow 46.234.47.105;
@@ -1841,6 +1840,7 @@ allow 50.118.225.227;
 allow 50.118.225.229;
 allow 5.104.86.6;
 allow 51.15.59.15;
+allow 51.195.107.220;
 allow 51.195.166.174;
 allow 51.222.142.67;
 allow 51.38.225.46;
