--- a/allow-tor_ips_v6.conf
+++ b/allow-tor_ips_v6.conf
@@ -14,6 +14,7 @@ allow 2001:41d0:304:200::a520;
 allow 2001:41d0:304:300::5bb5;
 allow 2001:41d0:304:300::74bf;
 allow 2001:41d0:601:1100::6524;
+allow 2001:41d0:701:1100::912e;
 allow 2001:41d0:801:1000::1b55;
 allow 2001:41d0:801:1000::c2;
 allow 2001:41d0:a:2a61::1;
@@ -361,7 +362,6 @@ allow 2a01:7e00::f03c:91ff:fe56:2656;
 allow 2a01:7e00::f03c:91ff:fe78:b382;
 allow 2a01:7e01::f03c:95ff:fe64:90e3;
 allow 2a02:16d0:0:5::1;
-allow 2a02:2970:1001::4b;
 allow 2a02:2b88:2:6ce::1;
 allow 2a02:418:6017::147;
 allow 2a02:418:6017::148;
