--- a/set_real_ip_from-tor_ips.conf
+++ b/set_real_ip_from-tor_ips.conf
@@ -743,6 +743,7 @@ set_real_ip_from 2001:41d0:304:200::a520;
 set_real_ip_from 2001:41d0:304:300::5bb5;
 set_real_ip_from 2001:41d0:304:300::74bf;
 set_real_ip_from 2001:41d0:601:1100::6524;
+set_real_ip_from 2001:41d0:701:1100::912e;
 set_real_ip_from 2001:41d0:801:1000::1b55;
 set_real_ip_from 2001:41d0:801:1000::c2;
 set_real_ip_from 2001:41d0:a:2a61::1;
@@ -1285,7 +1286,6 @@ set_real_ip_from 2a01:7e00::f03c:91ff:fe56:2656;
 set_real_ip_from 2a01:7e00::f03c:91ff:fe78:b382;
 set_real_ip_from 2a01:7e01::f03c:95ff:fe64:90e3;
 set_real_ip_from 2a02:16d0:0:5::1;
-set_real_ip_from 2a02:2970:1001::4b;
 set_real_ip_from 2a02:2b88:2:6ce::1;
 set_real_ip_from 2a02:418:6017::147;
 set_real_ip_from 2a02:418:6017::148;
@@ -1829,7 +1829,6 @@ set_real_ip_from 45.95.169.230;
 set_real_ip_from 45.95.169.24;
 set_real_ip_from 45.95.169.255;
 set_real_ip_from 46.165.243.36;
-set_real_ip_from 46.182.21.248;
 set_real_ip_from 46.23.109.25;
 set_real_ip_from 46.232.251.191;
 set_real_ip_from 46.234.47.105;
@@ -1841,6 +1840,7 @@ set_real_ip_from 50.118.225.227;
 set_real_ip_from 50.118.225.229;
 set_real_ip_from 5.104.86.6;
 set_real_ip_from 51.15.59.15;
+set_real_ip_from 51.195.107.220;
 set_real_ip_from 51.195.166.174;
 set_real_ip_from 51.222.142.67;
 set_real_ip_from 51.38.225.46;
