--- a/set_real_ip_from-tor_ips_v6.conf
+++ b/set_real_ip_from-tor_ips_v6.conf
@@ -14,6 +14,7 @@ set_real_ip_from 2001:41d0:304:200::a520;
 set_real_ip_from 2001:41d0:304:300::5bb5;
 set_real_ip_from 2001:41d0:304:300::74bf;
 set_real_ip_from 2001:41d0:601:1100::6524;
+set_real_ip_from 2001:41d0:701:1100::912e;
 set_real_ip_from 2001:41d0:801:1000::1b55;
 set_real_ip_from 2001:41d0:801:1000::c2;
 set_real_ip_from 2001:41d0:a:2a61::1;
@@ -361,7 +362,6 @@ set_real_ip_from 2a01:7e00::f03c:91ff:fe56:2656;
 set_real_ip_from 2a01:7e00::f03c:91ff:fe78:b382;
 set_real_ip_from 2a01:7e01::f03c:95ff:fe64:90e3;
 set_real_ip_from 2a02:16d0:0:5::1;
-set_real_ip_from 2a02:2970:1001::4b;
 set_real_ip_from 2a02:2b88:2:6ce::1;
 set_real_ip_from 2a02:418:6017::147;
 set_real_ip_from 2a02:418:6017::148;
